# SimpleRestaurantAPIClient

./: Cargo.toml  README.md
src/: main.rs  type_request.rs  utils.rs
