[package]
name = "SimpleRestaurantApiClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json","blocking"] }
threadpool = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0"
rand = "0.8.5"